--- a/src/LowerThirdMatchup.module.css
+++ b/src/LowerThirdMatchup.module.css
@@ -87,10 +87,10 @@
 
 .animated-text-container {
   overflow: hidden;
-  height: 2.4rem;
+  height: 3.2rem;
   position: relative;
   flex-grow: 1;
-  width: 100%; /* <<-- ADD THIS LINE */
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
